<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:textSize="48sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/poppins_bold"
        android:paddingLeft="24dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48sp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="590dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textStyle="bold"
        android:text="@string/login"
        android:fontFamily="@font/poppins_bold"
        android:backgroundTint="@color/black" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="650dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textStyle="bold"
        android:text="@string/register"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:backgroundTint="@color/white" />
</RelativeLayout>